Fixed issue with mobile view having white space on right side

--- a/css/main.css
+++ b/css/main.css
@@ -176,6 +176,10 @@
     padding-right: 30px !important;
 }
 
+.overflow-hidden{
+    overflow-x: hidden
+}
+
 /*End bootstrap override*/
 
 /*Fade in letters*/
